--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 														<div class="elementor-widget-container">
 															<div class="cz_btn_block">
 																<div>
-																	<a href="https://www.instagram.com/fadyabonaser"
+																	<a href="https://www.instagram.com/fady_illustrator/?hl=en"
 																		class="cz_btn cz_btn_ghost_icon cz_btn_fill_up cz_btn_icon_after">
 
 																		<span> <strong>Instagram </strong>
