--- a/index.html
+++ b/index.html
@@ -154,39 +154,10 @@
 																					</span></span><span
 																					style="font-family: Arial, serif;"><span
 																						style="font-size: large;"><span
-																							lang="en-US">I am a
-																							university graduate and
-																							professional artist born in
-																							1986, with over ten years of
-																							experience in illustration
-																							and visual storytelling. My
-																							artistic journey began in
-																							2010 in the fields of
-																							animation and visual arts,
-																							collaborating with
-																							institutions such as Juha
-																							Toon (2009–2010) where I
-																							worked on traditional
-																							animation and background
-																							design, and Cube Studio
-																							(2010–2012) as a concept
-																							artist, storyboard
-																							illustrator, and
-																							animation-ready content
-																							creator.
-																							<br />
-																							Over time, I transitioned to
-																							freelance work, specializing
-																							in illustrating children's
-																							books, educational
-																							materials, posters, and
-																							animated comics. I have
-																							collaborated with
-																							distinguished publishers and
-																							institutions across the
-																							Middle East, Europe, and the
-																							United
-																							States.<br /></span></span></span>
+																							lang="en-US">Fady Abou Nasser
+Illustrator | Visual Storyteller | Concept Artist
+
+I am a visual artist, born in 1986, with over ten years of experience in illustration, concept art, and digital storytelling. I have worked with many institutions worldwide, especially across the Middle East and Europe, delivering diverse works including children’s books, educational content, animated comics, and creative visual campaigns. I have collaborated with publishers in the UK, Lebanon, Kuwait, Algeria, France, and the United States. My goal is to bring stories to life with vibrant illustrations that blend emotion, culture, and imagination.<br /></span></span></span>
 																			</p>
 																		</div>
 																	</div>
