--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
 																			<p align="center"><span
 																					style="font-family: Arial, serif;"><span
 																						style="font-size: large;">
-																						Fady Abou Nasser <br />
+																						Fadi Abou Nasser <br />
 																						Illustrator and Visual Designer
 																						Specialized in Children's Books
 																					</span></span><span
 																					style="font-family: Arial, serif;"><span
 																						style="font-size: large;"><span
-																							lang="en-US">Fady Abou Nasser
+																							lang="en-US">Fadi Abou Nasser
 Illustrator | Visual Storyteller | Concept Artist
 
 I am a visual artist, born in 1986, with over ten years of experience in illustration, concept art, and digital storytelling. I have worked with many institutions worldwide, especially across the Middle East and Europe, delivering diverse works including children’s books, educational content, animated comics, and creative visual campaigns. I have collaborated with publishers in the UK, Lebanon, Kuwait, Algeria, France, and the United States. My goal is to bring stories to life with vibrant illustrations that blend emotion, culture, and imagination.<br /></span></span></span>
@@ -423,7 +423,267 @@ I am a visual artist, born in 1986, with over ten years of experience in illustr
 																			</a>
 																		</div>
 																	</div>
+
+
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/12.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/12.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/12.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
 																	
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/13.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/13.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/13.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+																	
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/14.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/14.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/14.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/15.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/15.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/15.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/16.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/16.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/16.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+																<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/17.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/17.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/17.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/18.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/18.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/18.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+
+<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/19.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/19.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/19.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/20.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/20.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/20.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/21.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/21.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/21.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+
+<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/22.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/22.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/22.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
+
+																	<div class="cz_grid_item ">
+																		<div><a class="cz_grid_link cz_grid_zoom_in"
+																				aria-lable="Image: 466628564_10230633218747204_1500535223319377093_n"
+																				href="asstes/image/23.jpg"
+																				data-xtra-lightbox><img loading="lazy"
+																					decoding="async" width="600"
+																					height="600"
+																					src="data:image/svg+xml,%3Csvg%20xmlns%3D&#39;http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg&#39;%20width=&#39;600&#39;%20height=&#39;600&#39;%20viewBox%3D&#39;0%200%20600%20600&#39;%2F%3E"
+																					data-czlz
+																					data-src="asstes/image/23.jpg"
+																					class="attachment-codevz_600_600 size-codevz_600_600 wp-image-1909"
+																					alt=""
+																					data-srcset="asstes/image/23.jpg"
+																					data-sizes="(max-width: 600px) 100vw, 600px" />
+																				<div class="cz_grid_details"><i
+																						class="cz_grid_icon fa fa-search"></i>
+																				</div>
+																			</a>
+																		</div>
+																	</div>
+
 
 																</div>
 															</div>
